--- a/index.html
+++ b/index.html
@@ -1,100 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=}, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="login.css">
+    
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SebAle wiki</title>
-  <link rel="stylesheet" href="@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="wiki.css">
-  <header>
-    <h1>DeepBook</h1>
-  </header>
 </head>
+<header><h1>Bienvenido</h1></header>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-sm-4">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Menú</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="login.html">Iniciar Sesion</a>
-                <a class="nav-link" href="problema.html">¿Problemas?</a>
-              </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card border-0 shadow rounded-3 my-5">
+                    <div class="card-body p-4 p-sm-5">
+                        <h5 class="card-title text-center mb-5 fw-light fs-5">Ingresar</h5>
+                        <form>
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control" id="floatingInput"
+                                    placeholder="name@example.com">
+                                <label for="floatingInput">Email</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="password" class="form-control" id="floatingPassword"
+                                    placeholder="Password">
+                                <label for="floatingPassword">Contraseña</label>
+                            </div>
+
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                                <label class="form-check-label" for="rememberPasswordCheck">
+                                    Recordar Contraseña
+                                </label>
+                            </div>
+                            <div class="d-grid">
+                                <a class="btn btn-primary" href="wiki.html" role="button">Ingresar</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-          </div>
-        </nav>
-      </div>
+        </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/4k0038 (1).gif" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Populares</h5>
-            <p class="card-text">Posts más populares</p>
-            <a href="populares.html" class="btn btn-primary">Ir !</a>
-          </div>
-        </div>
-        <br>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="img/4k0038 (1).gif" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Actividad reciente</h5>
-            <p class="card-text">Ultimos posts agregados</p>
-            <a href="recientes.html" class="btn btn-primary">Ir !</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div id="texto1">
-          <h3>Tu le das el Valor a los Secretos.</h3>
-          <br>
-          <p>Aqui podras comentar , visitar y dar valor a tus secretos ,atravez de la suscripcion
-            Está orientada para los amantes de la informacion, datos curiosos
-            <br>
-            y del arduo trabajo, ya que permite a los usuarios compartir posts interesantes, vergonzosos
-            u oscuros de ellos o de otras personas (hehe).
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="redes">
-    <h2>Siguenos en nuestras redes sociales!</h2>
-    <ul>
-      <li><a href="https://www.facebook.com/" class="facebook" ><i class="fab fa-facebook-f"> </i></a></li>
-      <li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"> </i></a></li>
-      <li><a href="https://www.instagram.com/" class="instagram"><i class="fab fa-instagram"> </i></a></li>
-      <li><a href="https://web.whatsapp.com/" class="whatsapp"><i class="fab fa-whatsapp"> </i></a></li>
-      <li><a href="https://web.Twitter.com/" class="twitter"><i class="fab fa-twitter"> </i></a></li>
-      <li><a href="https://www.Pinterest.com/" class="pinterest"><i class="fab fa-pinterest-p"> </i></a></li>
-    </ul>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
 </body>
-<div>
-  <footer>
-    By Seba y Ale
-    <br>
-    @Derechos reservados
-  </footer>
-</div>
 </html>
