--- a/populares.html
+++ b/populares.html
@@ -12,6 +12,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   <link rel="stylesheet" href="populares.css">
   <header>
     <h1>Post popular del mes</h1>
@@ -21,7 +25,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-4">
+      <div class="col-sm-9 col-md-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Menú</a>
@@ -31,7 +35,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
                 <a class="nav-link" href="login.html">Iniciar Sesion</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
               </div>
@@ -39,28 +43,46 @@
           </div>
         </nav>
       </div>
+      <div class="row">
+        <div class="col-md-12 col-sm-6">
+          <div id="texto1">
+            <h3>Encuentro super ofensiva esta imagen, alguien quiere pensar en las abejitas?<br>
+              No se merecen que les hagan memes #cancelemoslosmemes.</h3>
+            <img class="img" src="img/b.jpeg" alt="#">
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-2"> <img src="https://i.imgur.com/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
+          <div class="col-10">
+            <div class="comment-box ml-2">
+              <h4>Agrega un comentario</h4>
+              <div class="rating"> <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label> <input
+                  type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating"
+                  value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label
+                  for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label> </div>
+              <div class="comment-area"> <textarea class="form-control" placeholder="¿Que piensas de esto?"
+                  rows="4"></textarea> </div>
+              <div class="comment-btns mt-2">
+                <div class="row">
+                  <div class="col-6">
+                    <div class="pull-left"> <button class="btn btn-success btn-sm">Cancelar</button> </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="pull-right"> <button class="btn btn-success send btn-sm">Enviar<i
+                          class="fa fa-long-arrow-right ml-1"></i></button> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="texto1">
-    Encuentro super ofensivo esta imagen
   </div>
-  <div class="img">
-    <img src="img/b.jpeg" alt="a">
-  </div>
-  <div class="wrapper">
-    <div class="radio_group">
-      <input type="radio" name="like">
-      <label for="like"></label>
-      <i class="fas fa-thumbs-up"></i>
-    </div>
-  </div>
-  <div class="wrapper">
-    <div class="radio_group">
-      <input type="radio" name="dislike">
-      <label for="like"></label>
-      <i class="fas fa-thumbs-down"></i>
-    </div>
-  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
