--- a/wiki.html
+++ b/wiki.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
-                <a class="nav-link" href="login.html">Iniciar Sesion</a>
+                <a class="nav-link" href="index.html">Iniciar Sesion</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
               </div>
             </div>
