--- a/problema.html
+++ b/problema.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                <a class="nav-link" href="login.html">Iniciar Sesion</a>
+                <a class="nav-link" href="index.html">Iniciar Sesion</a>
                 <a class="nav-link" href="#">Registrarte</a>
               </div>
             </div>
