--- a/recientes.html
+++ b/recientes.html
@@ -50,7 +50,7 @@
       <div class="col-md-6 col-sm-12">
     <div class="mifoto">
         <h1>vivo en Valparaiso</h1>
-        <img src="img/logo.jpg" alt="a">esto es cerca de donde vivo</div>
+        <img src="img/a.jpeg" alt="a">esto es cerca de donde vivo</div>
       </nav>
     </div>
   </div>
