--- a/problema.html
+++ b/problema.html
@@ -31,7 +31,7 @@
               <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 <a class="nav-link" href="index.html">Iniciar Sesion</a>
-                <a class="nav-link" href="#">Registrarte</a>
+                <a class="nav-link" href="problema.html">¿Problemas?</a>
               </div>
             </div>
           </div>
