--- a/recientes.html
+++ b/recientes.html
@@ -50,7 +50,7 @@
       <div class="col-md-6 col-sm-12">
     <div class="mifoto">
         <h1>vivo en Valparaiso</h1>
-        <img src="img/a.jpeg" alt="a"></div>
+        <img src="img/resizer.jfif" alt="a"></div>
       </nav>
         <div class="card">
         <div class="row">
