--- a/recientes.html
+++ b/recientes.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet"
     href="@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   <link rel="stylesheet" href="recientes.css">
   <header>
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-4">
-
-    <h1>Actividad reciente </h1>
-       </div>
-        </nav>
-      </div>
+    <h1>Post popular del mes</h1>
   </header>
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-4">
+      <div class="col-sm-9 col-md-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Menú</a>
@@ -37,22 +36,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
                 <a class="nav-link" href="index.html">Iniciar Sesion</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
+              </div>
             </div>
           </div>
         </nav>
       </div>
-    </div>
-  </div><div class="container">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-    <div class="mifoto">
-        <h1>vivo en Valparaiso</h1>
-        <img src="img/resizer.jfif" alt="a"></div>
-      </nav>
-        <div class="card">
+      <div class="row">
+        <div class="col-md-12 col-sm-6">
+          <div id="texto1">
+         
+            <img class="img" src="img/resizer.jfif" alt="#">
+          </div>
+        </div>
+      </div>
+      <div class="card">
         <div class="row">
           <div class="col-2"> <img src="https://i.imgur.com/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
           <div class="col-10">
@@ -83,11 +83,9 @@
   </div>
   </div>
 
-    </div>
-  </div>
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    
+</body>
+
 </html>
