--- a/wiki.html
+++ b/wiki.html
@@ -31,6 +31,7 @@
                 <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
                 <a class="nav-link" href="index.html">Iniciar Sesion</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
+                <a class="nav-link" href="voyatenersuerte.html">Voy a tener suerte</a>
               </div>
             </div>
           </div>
