--- a/problema.html
+++ b/problema.html
@@ -4,18 +4,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>¿Problemas?</title>
+
 <link rel="stylesheet" href="problema.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+  
 <header>
   <h1>¿Problemas?</h1>
 </header>
-<head>
-</head>
 <body>
   <div class="container">
     <div class="row">
@@ -29,9 +25,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
                 <a class="nav-link" href="index.html">Iniciar Sesion</a>
+                <a class="nav-link" href="crear.html">Crear cuenta</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
+                <a class="nav-link" href="voyatenersuerte.html">Voy a tener suerte</a>
               </div>
             </div>
           </div>
@@ -39,26 +37,36 @@
       </div>
     </div>
   </div>
-  <form class="was-validated">
+  <form class="was-validated" name="problema">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-sm-4">
           <div class="mb-3">
-            <select class="form-select" required aria-label="select example">
+            <select class="form-select" name="opcion" required class="form-control">
               <option value="">Seleccione el tipo de problema</option>
               <option value="1">Problemas con inicio de sesion</option>
               <option value="2">Problemas de perfil</option>
               <option value="3">Problemas de internet</option>
             </select>
-            <div class="invalid-feedback"></div>
-            <label for="formFile" class="form-label">Adjuntar</label>
-            <input type="file" class="form-control" aria-label="file example" required>
-            <div class="invalid-feedback"></div>
-            <label for="validationTextarea" class="form-label">Mensaje</label>
-            <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Ingrese mensaje"
-              required></textarea>
-            <div class="invalid-feedback"></div>
-            <button class="button" >Enviar</button>
+      
+          
+        <div class="form-group">
+          <label class="col-sm-3 control-label">Mensaje</label>
+          <div class="col-sm-6" name="msj">
+              <input type="text" class="form-control" required class="form-control""
+                  placeholder="Type something" />
+                  <span id="errorName"></span>
+          </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-3 control-label">telefono</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" required data-parsley-type="number"
+                placeholder="Enter only numbers" />
+        </div>
+    </div>
+            <button class="button" onclick="valida_envia()" >Enviar</button>
             <div class="invalid-feedback"></div>
           </div>
         </div>
@@ -66,9 +74,12 @@
     </div>
   </form>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="js/parsley.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
