--- a/populares.html
+++ b/populares.html
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-9 col-md-12">
+      <div class="col-md-12 col-sm-4">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Menú</a>
@@ -37,12 +37,16 @@
               <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
                 <a class="nav-link" href="index.html">Iniciar Sesion</a>
+                <a class="nav-link" href="crear.html">Crear cuenta</a>
                 <a class="nav-link" href="problema.html">¿Problemas?</a>
+                <a class="nav-link" href="voyatenersuerte.html">Voy a tener suerte</a>
               </div>
             </div>
           </div>
         </nav>
       </div>
+    </div>
+  </div>
       <div class="row">
         <div class="col-md-12 col-sm-6">
           <div id="texto1">
@@ -54,7 +58,7 @@
       </div>
       <div class="card">
         <div class="row">
-          <div class="col-2"> <img src="https://i.imgur.com/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
+          <div class="col-2"> <img src="img/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
           <div class="col-10">
             <div class="comment-box ml-2">
               <h4>Agrega un comentario</h4>
