--- a/recientes.html
+++ b/recientes.html
@@ -1,5 +1,3 @@
-
-    <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,54 +22,57 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Menú</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
-                <a class="nav-link" href="index.html">Iniciar Sesion</a>
-                <a class="nav-link" href="problema.html">¿Problemas?</a>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-4">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">Menú</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="wiki.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Iniciar Sesion</a>
+                    <a class="nav-link" href="crear.html">Crear cuenta</a>
+                    <a class="nav-link" href="problema.html">¿Problemas?</a>
+                    <a class="nav-link" href="voyatenersuerte.html">Voy a tener suerte</a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-      <div class="row">
-        <div class="col-md-12 col-sm-6">
-          <div id="texto1">
-         
-            <img class="img" src="img/resizer.jfif" alt="#">
+            </nav>
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-2"> <img src="https://i.imgur.com/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
-          <div class="col-10">
-            <div class="comment-box ml-2">
-              <h4>Agrega un comentario</h4>
-              <div class="rating"> <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label> <input
-                  type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating"
-                  value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label
-                  for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label> </div>
-              <div class="comment-area"> <textarea class="form-control" placeholder="¿Que piensas de esto?"
-                  rows="4"></textarea> </div>
-              <div class="comment-btns mt-2">
-                <div class="row">
-                  <div class="col-6">
-                    <div class="pull-left"> <button class="btn btn-success btn-sm">Cancelar</button> </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="pull-right"> <button class="btn btn-success send btn-sm">Enviar<i
-                          class="fa fa-long-arrow-right ml-1"></i></button> </div>
+      <div class="row">
+    <div class="col-md-12 col-sm-6">
+        <div id="texto1">
+        <img class="img" src="img/resizer.jfif" alt="#">
+    </div>
+    </div>
+    </div>
+    <div class="card">
+    <div class="row">
+        <div class="col-2"> <img src="img/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
+        <div class="col-10">
+        <div class="comment-box ml-2">
+            <h4>Agrega un comentario</h4>
+            <div class="rating"> <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label> <input
+                type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating"
+                value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label
+                for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label> </div>
+            <div class="comment-area"> <textarea class="form-control" placeholder="¿Que piensas de esto?"
+                rows="4"></textarea> </div>
+            <div class="comment-btns mt-2">
+            <div class="row">
+                <div class="col-6">
+                <div class="pull-left"> <button class="btn btn-success btn-sm">Cancelar</button> </div>
+                </div>
+                <div class="col-6">
+                <div class="pull-right"> <button class="btn btn-success send btn-sm">Enviar<i
+                        class="fa fa-long-arrow-right ml-1"></i></button> </div>
                   </div>
                 </div>
               </div>
