--- a/problema.html
+++ b/problema.html
@@ -54,7 +54,7 @@
           <label class="col-sm-3 control-label">Mensaje</label>
           <div class="col-sm-6" name="msj">
               <input type="text" class="form-control" required class="form-control""
-                  placeholder="Type something" />
+                  placeholder="Su mensaje Aqui " />
                   <span id="errorName"></span>
           </div>
       </div>
@@ -63,7 +63,7 @@
         <label class="col-sm-3 control-label">telefono</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" required data-parsley-type="number"
-                placeholder="Enter only numbers" />
+                placeholder="Telefono'ejemplo :978556576'" />
         </div>
     </div>
             <button class="button" onclick="valida_envia()" >Enviar</button>
