--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </label>
                 <br><br>
                 <div>
-                    <button type="menu" class="button">Ingrese</button>
+                    <button type="submit" class="button">Ingrese</button>
                 </div>
             </div>
             <div class="d-grid">
