--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <br><br>
                 <div>
                     <button type="submit" class="button">Ingrese</button>
+                    <input type="submit" onclick='enviarFormulario();' value="Enviar">
                 </div>
             </div>
             <div class="d-grid">
