--- a/recientes.html
+++ b/recientes.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   <link rel="stylesheet" href="recientes.css">
   <header>
-    <h1>Post popular del mes</h1>
+    <h1>Recientes</h1>
   </header>
 </head>
 
