--- a/voyatenersuerte.html
+++ b/voyatenersuerte.html
@@ -46,26 +46,7 @@
             <div class="mt5" id="contenido"></div>
         </div>
     </div>
-    <br>
-    <script>
-        var contenido = document.querySelector('#contenido')
-        function traer() {
-            fetch('https://randomuser.me/api/')
-                .then(res => res.json())
-                .then(data => {
-                    console.log(data.results['0'])
-                    contenido.innerHTML =
-                        `<img src="${data.results['0'].picture.large}" class="img-fluid rounded-circle">
-            <p>Nombre: ${data.results['0'].name.first}</p>
-            <p>Apellido: ${data.results['0'].name.last}</p>
-            <p>Ciudad: ${data.results['0'].location.city}</p>
-            <p>Email: ${data.results['0'].email}</p>
-            <p>Sexo: ${data.results['0'].gender}</p>
-            <p>Edad: ${data.results['0'].dob.age}</p>
-            <p>Id: ${data.results['0'].login.username}</p>`
-                })
-        }
-    </script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -78,6 +59,6 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="js/voyatenersuerte.js"></script>
 </body>
-
 </html>
