--- a/problema.html
+++ b/problema.html
@@ -61,7 +61,7 @@
       <div class="form-group">
         <label class="col-sm-3 control-label">telefono</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" required data-parsley-type="number"
+            <input type="number" class="form-control" required data-parsley-type="number"
                 placeholder="Telefono'ejemplo :978556576'" />
         </div>
     </div>
